frontend/pages/hosts/details/cards/Policies/_styles.scss
.policies-card {
  .info-banner {
    margin-bottom: 1rem;
  }
  .table-container__header {
    display: none;
  }
  .data-table-block {
    .data-table__table {
      thead {
        .name__header {
          min-width: $col-md;
        }
        .response__header {
          width: 0;
        }
        .linkToFilteredHosts__header {
          width: 140px;
        }
      }
      tbody {
        tr {
          .name__cell {
            max-width: 0; // sets ellipsis

            .truncated-tooltip {
              font-weight: $regular;
            }
          }

          .policy-link {
            opacity: 0;
            transition: 250ms;
            text-overflow: none;
          }
          &:hover {
            .policy-link {
              opacity: 1;
            }
          }
          .policy-info {
            width: 100%; // sets ellipsis
            justify-content: left;

            &::after {
              content: url("../assets/images/icon-arrow-right-vibrant-blue-10x18@2x.png");
              transform: scale(0.5);
            }
          }
        }
      }
    }
  }
}

